<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <DatePicker
        android:id="@+id/dpFecha"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="123dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/tit_fechanac"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtnombre"
            android:textSize="@dimen/TamContacto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="259dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/txtTelfono"
            android:textSize="@dimen/TamTelefono" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="184dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtEmail"
            android:textSize="@dimen/TamEmail" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:hint="@string/txtDscpContacto" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="427dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo"
            />
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>