<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacionRegistro">

    <TextView
        android:id="@+id/tvConfDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/tvConfirmación"
        android:textAlignment="center"
        android:textSize="@dimen/TamContacto"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="113dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvNombre"
        android:layout_marginTop="160dp"
        android:text="@string/tvfechanac" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="201dp"
        android:text="@string/tvTele" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="241dp"
        android:text="@string/tvEmail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="278dp"
        android:text="@string/txtDscpContacto" />

    <TextView
        android:id="@+id/tvfechaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginEnd="152dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvTelefonoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvfechaData"
        android:layout_alignTop="@+id/textView4"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvEmailData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvfechaData"
        android:layout_alignTop="@+id/textView5"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvDescripData"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:layout_alignStart="@+id/tvfechaData"
        android:layout_alignTop="@+id/textView6"
        android:text="TextView" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="96dp"
        android:text="@string/btnTitulo" />
</RelativeLayout>